# skills

./: .gitignore  README.md  pyproject.toml
examples/: network_example.py
skills/: __init__.py  __main__.py  mcp_server.py
skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
skills/network/: __init__.py  lan_scanner.py  ping.py  port_scanner.py  scanner.py  wake_on_lan.py
tests/: __init__.py  test_lan_scanner.py  test_mcp_server.py  test_ping.py  test_port_scanner.py  test_scanner.py  test_wake_on_lan.py  test_wol.py
