[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills"
version = "0.1.0"
description = "智能体技能集合 – Intelligent Agent Skills"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scapy>=2.5.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
skills = "skills.__main__:main"
skills-mcp = "skills.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
